crates/testing/compiletest-integration/tests/ui/undefined-function.stderr
error: undefined function `undefined_function`
 --> tests/ui/undefined-function.rs:2:5
  |
2 |     undefined_function()
  |     ^^^^^^^^^^^^^^^^^^ not found in this scope
