crates/testing/compiletest-integration/tests/ui/undefined-function.rs
fn main() -> i64 {
    undefined_function() //~ ERROR undefined function
}
